styles/components/_navbar.scss
.navbar {
  display: flex;
  width: 100%;
  height: 5rem;

  &__content {
    z-index: 12;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    width: 100%;
    height: 5rem;
    background-color: $main-black;
    top: 0;
    left: 0;
    padding: 0 2rem;
  }

  &__title {
    @include typo-bungee-20(#fff);
    //color: rgb(192, 192, 192);
    white-space: nowrap;
}

&__name {
    @include typo-poppins-14-semibold(#fff);
    font-weight: 400;
    white-space: nowrap;
  }

  &__status {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 0.5rem;

    a,
    button {
      @include typo-poppins-12-semibold($main-black);
      font-weight: 400;
      height: 3rem;
      border-radius: 0.8rem;
      width: 6rem;
      border: 0.1rem solid $main-black;


      transition: all 0.2s ease-in-out;

      &:hover {
        transition: all 0.2s ease-in-out;
        box-shadow: 0.2rem 0.3rem #fff;
      }
    }
  }
}

@media screen and (max-width: map-get($breakpoints, "medium")) {
    .navbar {
        &__name--extra {
            display: none;
        }
    }
  }

